[tool.poetry]
name = "pcdcanalysistools"
version = "0.2.0"
description = "microservice analysis tools"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
packages = [
    { include = "PcdcAnalysisTools" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
authlib = "*" # let authutils decide which version we're using
authutils = ">=6.0.0"
# authutils = "^6.1.0"
# authutils = "4.0.0"
boto = ">=2.39.0"
# flask 2.2.0 removes `RequestContext.preserved` which we use in a workaround in `conftest.client`
Flask = ">=2.2.5"
Flask-Cors = "^3.0.9"
fuzzywuzzy = ">=0.6.1"
gen3authz = ">=1.0.4"
jsonschema = ">=3.2"
lxml = ">=4.6.5"
requests = ">=2.31.0,<3.0.0"
simplejson = ">=3.8.1"
cdispyutils = ">=2.0.1"
cdiserrors = ">=1.0.0"
cdislogging = ">=1.0.0"
indexclient = ">=2.1.1"
msgpack = "^0.5.2" 
packaging = "^20.0"
lockfile = "^0.12.2"
python-keystoneclient = "^1.8.1"
numpy = "^1.17.3"
scipy = ">=1.10.0"
pandas = "1.4.2"
lifelines = "^0.25.2"
gunicorn = ">=21.2.0"
psycopg2 = ">=2.8.2,<2.9.0"




# added in final container
addict = "^2.4.0"
argparse = "^1.4.0"
pycryptodome = "^3.21.0"
python-Levenshtein = "^0.12.0"
markupsafe = ">=2.1.1"
# Testing a fix to pcdcutils
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.5.1"}
python-dotenv = "^0.20.0"


[tool.poetry.dev-dependencies]
markupsafe = ">=2.1.1"
coverage = "^6.4.2"
pytest = "6.0.0"
pytest-cov = ">=2.5.1"
requests_mock = "1.4.0"
httmock = "1.2.3"
mock = "1.0.1"
pytest-flask = ">=0.15.0"
#moto = "0.4.5"
sphinxcontrib-httpdomain = "1.3.0"
codacy-coverage = "^1.3.11"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "3.0.4"
flasgger = "0.9.1"
cdisutilstest = {git = "https://git@github.com/uc-cdis/cdisutils-test.git", rev = "1.0.0"}
werkzeug = ">=2.2.3"
hsclient = {git = "https://github.com/uc-cdis/hsclient.git", rev = "1.0.0"}
doiclient = {git = "https://git@github.com/uc-cdis/doiclient.git", rev = "1.0.0"}

# added in final container



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"