[tool.poetry]
name = "pcdcanalysistools_intermediate"
version = "0.1.0"
description = "intermediate build container for a very large microservice"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "!=58.5"
msgpack = "^0.5.2" 
packaging = "^20.0"
lockfile = "^0.12.2"
authlib = "<=0.14.2"
authutils = "^6.1.0"
boto = "^2.39.0"
Flask = "^1.1.4"
Flask-Cors = "^3.0.9"
fuzzywuzzy = "^0.6.1"
gen3authz = "^0.4.0"
python-keystoneclient = "^1.8.1"
requests = "^2.22.0"
simplejson = "^3.8.1"
cdispyutils = "^1.0.4"
cdiserrors = "^0.1.2"
cdislogging = "^1.1.1"
numpy = "^1.17.3"
scipy = "^1.3.1"
pandas = "1.3.4"
lifelines = "^0.25.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
